# dev86

./: .gitignore  CMakeLists.txt  README-CMake.md
ar/: CMakeLists.txt
as/: CMakeLists.txt
bcc/: CMakeLists.txt
cmake/: CrossLibraries.cmake  Dev86Exports.cmake  StageToolchain.cmake
copt/: CMakeLists.txt
cpp/: CMakeLists.txt
ld/: CMakeLists.txt
unproto/: CMakeLists.txt
